--- a/DijkstraAlgorithm.csproj
+++ b/DijkstraAlgorithm.csproj
@@ -19,6 +19,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="README.md" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<Content Include="G Abstract.ico" />
 	</ItemGroup>
 
